fix inital visible overlay on video player and remove focus-within which didn't hide the overlay on a button click

--- a/frontend/src/features/Player/components/VideoPlayer.module.css
+++ b/frontend/src/features/Player/components/VideoPlayer.module.css
@@ -57,7 +57,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(0deg,rgba(0, 0, 0, 0.95) 0%, rgba(0, 0, 0, 0.85) 10%, rgba(0,0,0,0.2) 39%, rgba(0, 0, 0, 0.1) 100%);
+    background: linear-gradient(0deg,rgba(0, 0, 0, 0.95) 0%, rgba(0, 0, 0, 0.85) 10%, rgba(0,0,0,0.3) 39%, rgba(0, 0, 0, 0.3) 80%, rgba(0, 0, 0, 0.8) 100%);
     color: white;
     font-size: 1.5rem;
     border-radius: var(--radius);
@@ -75,7 +75,7 @@
 }
 
 .videoContainer:hover .overlay,
-.videoContainer:focus-within .overlay,
+.videoContainer:has(:focus-visible) .overlay,
 .videoContainer.initialOpen .overlay {
     opacity: 1;
     pointer-events: auto;
